[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sensor.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18, 92.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 58 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 4 )

[node name="Sensor" type="Node2D"]
script = ExtResource( 1 )

[node name="Bad" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bad"]
position = Vector2( 0, 0.5 )
shape = SubResource( 5 )

[node name="Good" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
shape = SubResource( 4 )

[node name="Great" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Great"]
shape = SubResource( 3 )

[node name="Perfect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Bad" to="." method="_on_Bad_body_entered"]
[connection signal="body_exited" from="Bad" to="." method="_on_Bad_body_exited"]
[connection signal="body_entered" from="Good" to="." method="_on_Good_body_entered"]
[connection signal="body_exited" from="Good" to="." method="_on_Good_body_exited"]
[connection signal="body_entered" from="Great" to="." method="_on_Great_body_entered"]
[connection signal="body_exited" from="Great" to="." method="_on_Great_body_exited"]
[connection signal="body_entered" from="Perfect" to="." method="_on_Perfect_body_entered"]
[connection signal="body_exited" from="Perfect" to="." method="_on_Perfect_body_exited"]
